--- a/pythonQuestion.ipynb
+++ b/pythonQuestion.ipynb
@@ -365,11 +365,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "373af681",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.0, 5.0, 8.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [(1,2,3), (4,5,6), (7,8,9)]\n",
+    "list2 = []\n",
+    "for i in list1:\n",
+    "    total = 0\n",
+    "    for j in i:\n",
+    "        total += j\n",
+    "    total = total / len(i)\n",
+    "    list2.append(total)\n",
+    "print(list2)"
+   ]
   }
  ],
  "metadata": {
