--- a/listAndStrings.ipynb
+++ b/listAndStrings.ipynb
@@ -21,15 +21,7 @@
    "execution_count": null,
    "id": "5df01bd7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello WOrld \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -46,39 +38,8 @@
    "execution_count": null,
    "id": "b27a2568",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sublists: [[8, 3, 2], [7, 4, 1], [6, 5]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 2. Split a list into k sublists such that: No sublist is empty. The difference between the maximum sum and minimum sum of sublists is minimized.\n",
-    "list1 = [1, 2, 3, 4, 5, 6, 7, 8]\n",
-    "k = 3\n",
-    "\n",
-    "def split_list(lst, k):\n",
-    "    n = len(lst)\n",
-    "    if k > n:\n",
-    "        return -1\n",
-    "    \n",
-    "    lst.sort(reverse=True)\n",
-    "    sublists = [[] for _ in range(k)]\n",
-    "    sums = [0] * k\n",
-    "\n",
-    "    for num in lst:\n",
-    "        min_index = sums.index(min(sums))\n",
-    "        sublists[min_index].append(num)\n",
-    "        sums[min_index] += num\n",
-    "\n",
-    "    return sublists, max(sums) - min(sums)\n",
-    "\n",
-    "result = split_list(list1, k)\n",
-    "print(\"Sublists:\", result[0])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -91,11 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "4eb72bc7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': [1, 3], 'b': [2]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1 = {}\n",
+    "lst = [('a', 1), ('b', 2), ('a', 3)]\n",
+    "for i in lst:\n",
+    "    if i[0] not in dict1:\n",
+    "        dict1[i[0]] = [i[1]]\n",
+    "    else:\n",
+    "        dict1[i[0]].append(i[1])\n",
+    "print(dict1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,8 +90,26 @@
    "execution_count": null,
    "id": "b10726e1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "list1 = list1[::-1]\n",
+    "if len(list1) % 2 == 0:\n",
+    "    list1 = list1[0:len(list1)//2] + list1[len(list1)//2:][::-1]\n",
+    "else:\n",
+    "    list1 = list1[0:len(list1)//2] + list1[len(list1)//2+1:][::-1] + [list1[len(list1)//2]]\n",
+    "\n",
+    "print(list1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,7 +126,22 @@
    "id": "2c79bc3d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "string = \"aaabbcccc\"\n",
+    "countC = {}\n",
+    "for char in string:\n",
+    "    if char in countC:\n",
+    "        countC[char] += 1\n",
+    "    else:\n",
+    "        countC[char] = 1\n",
+    "\n",
+    "for char, count in countC.items():\n",
+    "    print(char, end=\"\")\n",
+    "    if count > 2:\n",
+    "        print(count, end=\"\")\n",
+    "    elif count == 2:\n",
+    "        print(char, end=\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,18 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "ea7ebc6e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{2, 3}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list1 = [1, 2, 3]\n",
     "list2 = [2, 5, 3]\n",
@@ -194,18 +197,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b743ff22",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FBI"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list = [\"Federal\", \"Bureau\", \"Investigation\"]\n",
     "for i in list:\n",
@@ -226,15 +221,7 @@
    "execution_count": null,
    "id": "e584aa7c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The strings are anagrams\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "str1 = \"Remit\"\n",
     "str2 = \"Timer\"\n",
@@ -258,18 +245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4f135e40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The first missing number is 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list = [1,2, 3, 4, 5, 7]\n",
     "list.sort()\n",
