--- a/listAndStrings.ipynb
+++ b/listAndStrings.ipynb
@@ -180,11 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "6811bf27",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abc', 'def', ['ghi', 'jkl']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [\"abc\", \"def\", [\"ghi\", \"jkl\"]]\n",
+    "lst2 = []\n",
+    "for i in lst:\n",
+    "    if type(i) == list:\n",
+    "        for j in i:\n",
+    "            lst2.append(j)\n",
+    "    else:\n",
+    "        lst2.append(i)\n",
+    "print(lst2)\n",
+    "\n",
+    "#This does not work but I don't understand why"
+   ]
   },
   {
    "cell_type": "markdown",
