--- a/listAndStrings.ipynb
+++ b/listAndStrings.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "6811bf27",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['abc', 'def', ['ghi', 'jkl']]\n"
+      "['abc', 'def', 'ghi', 'jkl']\n"
      ]
     }
    ],
@@ -196,7 +196,7 @@
     "lst = [\"abc\", \"def\", [\"ghi\", \"jkl\"]]\n",
     "lst2 = []\n",
     "for i in lst:\n",
-    "    if type(i) == list:\n",
+    "    if isinstance(i, list):\n",
     "        for j in i:\n",
     "            lst2.append(j)\n",
     "    else:\n",
