--- a/numpyQuestion.ipynb
+++ b/numpyQuestion.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8ed7a8c5",
    "metadata": {},
    "outputs": [],
@@ -48,12 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fbbfd5f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "checkerboard = np.zeros((8, 8))\n",
+    "checkerboard = np.zeros((8, 8), dtype=int)\n",
     "checkerboard[1::2, ::2] = 1\n",
     "checkerboard[::2, 1::2] = 1\n",
     "print(checkerboard)"
@@ -96,10 +111,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f6a61f4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3. 5. 6. 7. 6.]\n",
+      " [4. 0. 0. 0. 0.]\n",
+      " [2. 0. 0. 0. 2.]\n",
+      " [7. 0. 0. 0. 6.]\n",
+      " [0. 7. 6. 1. 2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "l = np.random.randint(10, size=(5, 5))\n",
     "l1 = np.zeros((5, 5))\n",
@@ -144,10 +171,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9b22ae83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[4 7 0]\n",
+      "  [0 3 2]]\n",
+      "\n",
+      " [[9 3 2]\n",
+      "  [2 0 8]]]\n",
+      "\n",
+      "[[[0 7 4]\n",
+      "  [2 3 0]]\n",
+      "\n",
+      " [[2 3 9]\n",
+      "  [8 0 2]]]\n"
+     ]
+    }
+   ],
    "source": [
     "image = np.random.randint(0, 10, (2, 2, 3))\n",
     "print(image)\n",
@@ -218,7 +263,16 @@
    "execution_count": null,
    "id": "45e7be4d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "np.append() time: 0.027537107467651367\n",
+      "np.concatenate() time: 0.018067359924316406\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -231,7 +285,8 @@
     "arr = np.array([])\n",
     "for i in range(10000):\n",
     "    arr = np.concatenate((arr, [i]))\n",
-    "print(\"np.concatenate() time:\", time.time() - init)"
+    "print(\"np.concatenate() time:\", time.time() - init)\n",
+    "#why?"
    ]
   },
   {
@@ -244,10 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "66fd7b86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 6]\n"
+     ]
+    }
+   ],
    "source": [
     "l = [4, 5, 6]\n",
     "arr = np.array([1, 2, 3])\n",
