--- a/pythonQuestion.ipynb
+++ b/pythonQuestion.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bb31c19a",
    "metadata": {},
    "outputs": [
@@ -45,22 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9c83b4fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "5\n",
-      "14\n",
-      "30\n",
-      "55\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = int(input())\n",
     "\n",
@@ -81,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ee02dc40",
    "metadata": {},
    "outputs": [
@@ -182,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "24887637",
    "metadata": {},
    "outputs": [
@@ -212,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4712a412",
    "metadata": {},
    "outputs": [
@@ -242,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ca8b9f09",
    "metadata": {},
    "outputs": [
@@ -272,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ceb98e2f",
    "metadata": {},
    "outputs": [
@@ -304,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "da6f8331",
    "metadata": {},
    "outputs": [
@@ -321,7 +309,9 @@
     "list2 = [1, 2, 3, 5]\n",
     "set1 = set(list1)\n",
     "set2 = set(list2)\n",
-    "print(set1.difference(set2))"
+    "set3 = set1.union(set2)\n",
+    "set4 = set1.intersection(set2)\n",
+    "print(set3.difference(set4))"
    ]
   },
   {
@@ -334,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "788a5eaf",
    "metadata": {},
    "outputs": [
@@ -342,15 +332,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(1, 2), (3, 4), (5, 6)]\n"
+      "[(2, 1), (4, 3), (6, 5)]\n"
      ]
     }
    ],
    "source": [
     "list1 = [(1, 2), (3, 4), (5, 6)]\n",
     "\n",
-    "for i in list1:\n",
-    "    i = i[::-1]\n",
+    "for i in range(len(list1)):\n",
+    "    i_new = list(list1[i])\n",
+    "    i_new[0], i_new[1] = i_new[1], i_new[0]\n",
+    "    i_new = tuple(i_new)\n",
+    "    list1[i] = i_new\n",
     "\n",
     "print(list1)"
    ]
@@ -365,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "373af681",
    "metadata": {},
    "outputs": [
@@ -382,8 +375,7 @@
     "list2 = []\n",
     "for i in list1:\n",
     "    total = 0\n",
-    "    for j in i:\n",
-    "        total += j\n",
+    "    \n",
     "    total = total / len(i)\n",
     "    list2.append(total)\n",
     "print(list2)"
